# unitree_h1_tech_practice_ws

./: .gitignore  install_deps.bash
aruco_analyzer/: package.xml  pip_requirements.txt  setup.cfg  setup.py
aruco_analyzer/aruco_analyzer/: aruco_analyzer.py
aruco_analyzer/config/: debug_params.yaml  release_params.yaml
aruco_analyzer/launch/: debug.launch.py  release.launch.py
aruco_bringup/: package.xml  setup.cfg  setup.py
aruco_bringup/launch/: aruco_bringup_debug.launch.py  aruco_bringup_release.launch.py
aruco_bringup/rqt_config/: debug.perspective
aruco_msgs/: CMakeLists.txt  package.xml
aruco_msgs/msg/: ArucoMarker.msg  ArucoMarkers.msg
camera_driver/: package.xml  setup.py
camera_driver/camera_driver/: camera_driver.py
camera_driver/config/: debug_params.yaml  release_params.yaml
camera_driver/launch/: debug.launch.py  release.launch.py
realsense_pkg/config/: aruco_set.yaml
realsense_pkg/launch/: bringup.launch.py
